alignment and cors issues done

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,41 +1,40 @@
+h1 {
+    color: white;
+    text-align: center;
+}
+
 .container {
-    display: grid;
-    grid-template-columns: 7fr 3fr;
+    display: flex;
+    flex-direction: column;
 }
 
 .myId {
-    margin-right: 5rem;
+    width: 80%;
+    margin: auto;
+    margin-top: 4rem;
     border-radius: 5px;
-    background: #c9d6ff; /* fallback for old browsers */
-    background: -webkit-linear-gradient(
-        to right,
-        #e2e2e2,
-        #c9d6ff
-    ); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(
-        to right,
-        #e2e2e2,
-        #c9d6ff
-    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background: #c9d6ff;
     padding: 2rem;
-    display: grid;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-content: center;
+}
+.info-options {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .call-button {
     text-align: center;
-    margin-top: 2rem;
 }
 
 .video-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
     justify-content: center;
     align-content: center;
-    margin-top: 10rem;
-    margin-left: 10rem;
+    margin-top: 3rem;
 }
 
 .caller {
@@ -44,15 +43,5 @@
 }
 
 body {
-    background: #4776e6; /* fallback for old browsers */
-    background: -webkit-linear-gradient(
-        to right,
-        #8e54e9,
-        #4776e6
-    ); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(
-        to right,
-        #8e54e9,
-        #4776e6
-    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #18191b;
 }
